# MiniSql

./: miniSql.sln
miniSql/: API.cpp  API.h  Attribute.cpp  Attribute.h  BPlusTree.cpp  BPlusTree.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  CatalogManager.cpp  CatalogManager.h  Condition.cpp  Condition.h  IndexInfo.h  IndexManager.cpp  IndexManager.h  Indexs  Interpreter.cpp  Interpreter.h  Minisql.h  RecordManager.cpp  RecordManager.h  main.cpp  miniSql.vcxproj  miniSql.vcxproj.filters  person  readme.md  test.sql
